--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>edjro</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Short+Stack' rel='stylesheet' type='text/css'>
+    <link href="css/overrides.css" rel="stylesheet">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Welcome to my frist web page on github pages.</p>
+
+    <!-- Simple Menu Bar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="pull-left" href="#" style="margin-top:5px; margin-bottom:5px;">
+                    <img alt="Brand" src="img/logo_green_900.png" height="90px" width="170px">
+                </a>
+                <a href="#who">Who</a>
+                <a href="#who">What</a>
+                <a href="#who">How</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
